# solanaHackathon

./: .gitattributes  .gitignore  APP_STRUCTURE.md  DEPLOYED_ADDRESSES.md  DEPLOYMENT.md  DEPLOY_NOW.md  PROJECT_OVERVIEW.md  README.md  SETUP_BACKEND.md  SMART_CONTRACTS_EXPLAINED.md  YOUTUBE_INTEGRATION.md  nixpacks.toml  railway.json  test-buy.js
backend/: package-lock.json  package.json  railway.json
backend/prisma/: schema.prisma
backend/scripts/: addMockCreators.js  createRealMockTokens.js  createRealTokens.js  seedFeaturedCreators.js  seedProductionCreators.js  verify-demo-ready.js
backend/src/: server.js
backend/src/cron/: updateMetrics.js
backend/src/routes/: auth.js  creators.js  launch.js  tokens.js  users.js  (+1 more)
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/creator-vest/: Anchor.toml
contracts/programs/bonding-curve/: Cargo.toml
contracts/programs/bonding-curve/src/: lib.rs
contracts/programs/token-factory/: Cargo.toml
contracts/programs/token-factory/src/: lib.rs
contracts/scripts/: create-volume.ts  deploy-creator-tokens.ts  seed-database.ts
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppSidebar.tsx  CreatorCard.tsx  Footer.tsx  Header.tsx  Navbar.tsx  PublicNav.tsx  ScrollFloat.css  ScrollFloat.jsx  SkeletonCard.tsx  SpotlightCard.css
frontend/lib/: config.ts  launchToken.ts  mockData.ts  solana.ts
scripts/: check-token-metadata.js  register-existing-token.js  verify-demo-ready.js
(+17 files in other folders)
